# mlops-credit-risk-plataform

./: .gitignore  README.md
.github/workflows/: ci.yml  deploy-pages.yml
api/: .dockerignore  Dockerfile  pyproject.toml
api/src/credit_risk_api/adapters/: log_only_logger.py  mlflow_provider.py  postgres_logger.py
api/src/credit_risk_api/domain/: exceptions.py  explanation.py  models.py  ports.py  scoring.py
api/src/credit_risk_api/entrypoints/: app.py  routes.py  schemas.py
api/tests/integration/: conftest.py  test_mlflow_provider.py  test_postgres_logger.py
api/tests/unit/: test_routes.py  test_scoring.py
frontend/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json  proxy.conf.json
frontend/public/: arquitetura.html
frontend/src/: index.html  styles.css
frontend/src/app/: app.css  app.html  app.ts  demo-model.ts  prediction.service.ts
infra/: .env.example  docker-compose.yml
infra/grafana/provisioning/dashboards/: credit-risk-api.json  provider.yml
infra/mlflow/: Dockerfile
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
ml/: mlflow.db  pyproject.toml
ml/notebooks/: 01_eda_baseline.ipynb
ml/src/credit_risk/: data.py  features.py  responsible_ai.py  train.py  validation.py
pipelines/: pyproject.toml
pipelines/flows/: drift_flow.py  training_flow.py
pipelines/reports/: drift_report.html
