[project]
name = "credit-risk-api"
version = "0.1.0"
description = "API de inferencia de credit risk - arquitetura hexagonal"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.40",
    "fastapi>=0.139.0",
    "lightgbm>=4.6.0",
    "mlflow>=3.14,<4",
    "pandas>=2.3.3",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "psycopg[binary,pool]>=3.3.4",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "skops>=0.14.0",
    "uvicorn>=0.50.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/credit_risk_api"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
