[project]
name = "credit-risk"
version = "0.1.0"
description = "Credit risk model - treino e avaliação"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/credit_risk"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "kagglehub>=1.0.2",
]
