[project]
name = "credit-risk"
version = "0.1.0"
description = "Credit risk model - treino e avaliação"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "mlflow>=3.14.0",
    "boto3>=1.43.40",
    "python-dotenv>=1.2.2",
    "pandera>=0.32.1",
    "fairlearn>=0.14.0",
    "shap>=0.49.1",
    "numba>=0.60",
    "llvmlite>=0.43",
    "lightgbm>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/credit_risk"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "kagglehub>=1.0.2",
]
