[project]
name = "credit-risk-pipelines"
version = "0.1.0"
description = "Orquestracao: treino com gate de promocao + monitoramento de drift"
requires-python = ">=3.11"
dependencies = [
    "credit-risk",
    "evidently>=0.7.21",
    "prefect>=3.7.7",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
]

[tool.uv]
package = false

[tool.uv.sources]
credit-risk = { path = "../ml", editable = true }
